fixed counter bug and dropdown out of boundary bug + added styling

--- a/where-is-waldo/src/index.css
+++ b/where-is-waldo/src/index.css
@@ -20,6 +20,7 @@ code {
   position: relative;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  max-width: 100%;
 }
 
 .backgroundDiv>img {
@@ -128,7 +129,8 @@ code {
   align-items: center;
   justify-content: center;
   background: linear-gradient(to left, #EE2A24 50%, #00AEEF 50%);
-  max-height: 80px;
+  height: fit-content;
+  max-height: 150px;
 }
 
 .homePageHeader2 {
@@ -136,11 +138,16 @@ code {
   align-items: center;
   justify-content: space-between;
   background: linear-gradient(to left, #EE2A24 50%, #00AEEF 50%);
-  max-height: 80px;
+  max-height: 150px;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .headerLeft, .headerRight {
-  width: 100px;
+  display: flex;
+  width: 400px;
 }
 
 .homePageDifficulty {
@@ -307,4 +314,54 @@ tbody tr:hover {
 
 .headerRight {
   color: black;
+}
+
+select {
+   -webkit-appearance:none;
+   -moz-appearance:none;
+   -ms-appearance:none;
+   appearance:none;
+   outline:0;
+   box-shadow:none;
+   border:0!important;
+   background: #EE2A24;
+   background-image: none;
+   flex: 1;
+   padding: 0 .5em;
+   color:#fff;
+   cursor:pointer;
+   font-size: 1em;
+   font-family: 'Open Sans', sans-serif;
+   border-radius: 20%;
+}
+select::-ms-expand {
+   display: none;
+}
+.charSelectionMenu {
+   position: relative;
+   display: flex;
+   width: 20em;
+   height: 3em;
+   line-height: 3;
+   background: #5c6664;
+   overflow: hidden;
+   border-radius: .25em;
+}
+.charSelectionMenu::after {
+   content: '\25BC';
+   position: absolute;
+   top: 0;
+   right: 0;
+   padding: 0 1em;
+   background: #2b2e2e;
+   cursor:pointer;
+   pointer-events:none;
+   transition:.25s all ease;
+}
+.charSelectionMenu:hover::after {
+   color: #23b499;
+}
+
+.backgroundDiv:hover {
+  cursor: pointer;
 }
